force-app/main/default/objects/SAP_Material_Code__c/SAP_Material_Code__c.object-meta.xml
<CustomObject>
    <label>SAP Material Code</label>
    <nameField>
        <label>SAP Material Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Material Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>