force-app/main/default/objects/SAP_Material_Code__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it an active material?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>