force-app/main/default/objects/SAP_Material_Code__c/fields/Bottle__c.field-meta.xml
<CustomField>
    <fullName>Bottle__c</fullName>
    <label>Bottle</label>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>SAP Material Codes</relationshipLabel>
    <relationshipName>SAP_Material_Codes1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>