force-app/main/default/objects/SAP_Material_Code__c/fields/Bottle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Identifier__c</fullName>
    <label>Bottle Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>