force-app/main/default/objects/SAP_Material_Code__c/fields/Material_Code_Key__c.field-meta.xml
<CustomField>
    <fullName>Material_Code_Key__c</fullName>
    <description>Copy of SAP Material Code Name</description>
    <externalId>true</externalId>
    <label>Material Code Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>