force-app/main/default/objects/SAP_Material_Code__c/fields/OM_Description__c.field-meta.xml
<CustomField>
    <fullName>OM_Description__c</fullName>
    <label>Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>