force-app/main/default/objects/SAP_Material_Code__c/fields/OM_ProductRef__c.field-meta.xml
<CustomField>
    <fullName>OM_ProductRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SAP Material Codes</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <type>Lookup</type>
</CustomField>