force-app/main/default/objects/SAP_Material_Code__c/fields/Pack_Spec__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec__c</fullName>
    <label>Pack Spec</label>
    <length>12</length>
    <type>Text</type>
</CustomField>