force-app/main/default/objects/SAP_Material_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bottle__c</columns>
    <columns>SAP_Model_Number__c</columns>
    <columns>Bottle_Identifier__c</columns>
    <columns>Pack_Spec__c</columns>
    <columns>Material_Code_Key__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>